fixes link spacing and content box position

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,8 @@ body {
 .no-dec {
   text-decoration: none;
 }
+
+.navlinks li {
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
